--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,119 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
+
+	.input-class {
+		@apply text-base p-6 placeholder:text-base rounded-lg  text-gray-900 placeholder:text-gray-500 bg-white;
+	}
+	.form-item {
+		@apply flex flex-col gap-1.5 my-14;
+	}
+
+	.form-label {
+		@apply text-lg w-full max-w-[280px] font-medium text-gray-700;
+	}
+
+	.form-message {
+		@apply text-xs text-red-500;
+	}
+}
+
+@layer base {
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 0 0% 3.9%;
+		--card: 0 0% 100%;
+		--card-foreground: 0 0% 3.9%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 0 0% 3.9%;
+		--primary: 0 0% 9%;
+		--primary-foreground: 0 0% 98%;
+		--secondary: 0 0% 96.1%;
+		--secondary-foreground: 0 0% 9%;
+		--muted: 0 0% 96.1%;
+		--muted-foreground: 0 0% 45.1%;
+		--accent: 0 0% 96.1%;
+		--accent-foreground: 0 0% 9%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 0 0% 89.8%;
+		--input: 0 0% 89.8%;
+		--ring: 0 0% 3.9%;
+		--chart-1: 5 20% 20%;
+		--chart-2: 3 58% 39%;
+		--chart-3: 7 37% 24%;
+		--chart-4: 3 74% 66%;
+		--chart-5: 7 87% 7%;
+		--radius: 0.5rem;
+	}
+	.dark {
+		--background: 0 0% 3.9%;
+		--foreground: 0 0% 98%;
+		--card: 0 0% 3.9%;
+		--card-foreground: 0 0% 98%;
+		--popover: 0 0% 3.9%;
+		--popover-foreground: 0 0% 98%;
+		--primary: 0 0% 98%;
+		--primary-foreground: 0 0% 9%;
+		--secondary: 0 0% 14.9%;
+		--secondary-foreground: 0 0% 98%;
+		--muted: 0 0% 14.9%;
+		--muted-foreground: 0 0% 63.9%;
+		--accent: 0 0% 14.9%;
+		--accent-foreground: 0 0% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 0 0% 14.9%;
+		--input: 0 0% 14.9%;
+		--ring: 0 0% 83.1%;
+		--chart-1: 20 10% 10%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
+	}
+}
+
+@layer base {
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-[#FAF8F4];
+	}
+}
+
+.body-contain {
+	display: flex;
+	flex-direction: row;
+	height: 100vh;
+}
+
+.sidenav-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	z-index: 1;
+}
+
+.main-content {
+	flex: 1;
+	margin-left: 200px;
+	/* width: 100%; */
+}
+
+/* Optional: Media query for responsive design */
+
+@media (max-width: 768px) {
+	.sidenav-container {
+		width: 150px; /* Adjust sidebar width for smaller screens */
+	}
+	.main-content {
+		margin-left: 150px; /* Match the adjusted sidebar width */
+	}
 }
