--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,16 @@
 	.form-message {
 		@apply text-xs text-red-500;
 	}
+
+	.btnOne {
+		@apply bg-primaryBlue hover:bg-blue-700 text-white w-full  md:w-[339px] p-8 text-lg;
+	}
+	.btnTwo {
+		@apply bg-bgWhite hover:bg-blue-100 text-primaryBlue w-full  md:w-[339px]  p-8 text-lg;
+	}
+	.card {
+		@apply shadow-lg p-12  border border-neutral-50 rounded-lg bg-white;
+	}
 }
 
 @layer base {
@@ -115,6 +125,6 @@
 		width: 150px; /* Adjust sidebar width for smaller screens */
 	}
 	.main-content {
-		margin-left: 150px; /* Match the adjusted sidebar width */
+		margin-left: 0px; /* Match the adjusted sidebar width */
 	}
 }
