--- a/app/globals.css
+++ b/app/globals.css
@@ -109,12 +109,13 @@
 	top: 0;
 	left: 0;
 	height: 100vh;
+	width: 200px;
 	z-index: 1;
 }
 
 .main-content {
 	flex: 1;
-	margin-left: 200px;
+	margin-left: 250px;
 	/* width: 100%; */
 }
 
