--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,9 @@
 	.card {
 		@apply shadow-lg p-12  border border-neutral-50 rounded-lg bg-white;
 	}
+	.card2 {
+		@apply shadow-lg p-8  border border-neutral-50 rounded-lg bg-white;
+	}
 }
 
 @layer base {
